--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -72,6 +72,7 @@ services:
       - CORE_PEER_ID=peer0.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
+      - CORE_PEER_TLS_ENABLED=true
     ports:
       - 7051:7051
       - 7053:7053
@@ -89,6 +90,7 @@ services:
       - CORE_PEER_ID=peer1.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer1.org1.example.com:7051
+      - CORE_PEER_TLS_ENABLED=true
     ports:
       - 7056:7051
       - 7058:7053
@@ -106,6 +108,7 @@ services:
       - CORE_PEER_ID=peer0.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer0.org2.example.com:7051
+      - CORE_PEER_TLS_ENABLED=true
     ports:
       - 8051:7051
       - 8053:7053
@@ -123,6 +126,7 @@ services:
       - CORE_PEER_ID=peer1.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer1.org2.example.com:7051
+      - CORE_PEER_TLS_ENABLED=true
     ports:
       - 8056:7051
       - 8058:7053
