--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -128,5 +128,16 @@ services:
       - 8058:7053
     volumes:
         - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/:/etc/hyperledger/crypto/peer
-    depends_on:
-      - orderer.example.com
+
+  # fabric-rest api server
+  api.org1.example.com:
+    image: maxxx1313/fabric-rest
+    container_name: api.org1.example.com
+    ports:
+      - 4000:4000
+    environment:
+      - ORG=org1
+      - PORT=4000        
+    volumes:
+     - ../artifacts:/usr/src/artifacts
+    command: npm start
